Add ROS 2 / colcon entries to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@
 
 # debug information files
 *.dwo
+# =========================
+# ROS 2 / colcon
+# =========================
+build/
+install/
+log/
