--- a/src/cam2image_vm2ros/CMakeLists.txt
+++ b/src/cam2image_vm2ros/CMakeLists.txt
@@ -53,4 +53,9 @@ ament_export_targets(${PROJECT_NAME})
 
 ament_export_dependencies(rclcpp_components cv_bridge)  # Export cv_bridge
 
+install(DIRECTORY config
+  DESTINATION share/${PROJECT_NAME}
+)
+
+
 ament_package()
